Refactoring of domain entities and removed acl entry creation for admin users. Whole project organize imports.